[metadata]
name = pas-server
description = Python Application Services: Server
long_description =
    "pas-server" provides the infrastructure to listen on sockets, accept and handle connections or queue them as well
    as to define an asynchronous handler for active ones.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = MPL2
url = https://www.direct-netware.de/redirect?pas;server
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
